Refactoring to new package, and updated http client to use Gson and modules