@@ -1,6 +1,10 @@
 plugins {
     id 'java-library'
+    id 'idea'
+    id 'eclipse'
 }
+
+ext.moduleName = 'com.kousenit.recipes'
 
 group 'com.kousenit'
 version '1.0'
@@ -13,6 +17,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
@@ -20,4 +26,27 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', "org.junit.jupiter.api",
+                '--add-reads', "$moduleName=org.junit.jupiter.api",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
 }
